# vcpkg-extras

./: .gitignore  .psenvrc.ps1  .psenvrc.ps1.template  CMakeLists.txt  README.md  pkg-build-test.ps1  run-vcpkg-build.ps1  vcpkg-configuration.json  vcpkg.json
overlays/ports/irsdkcpp/: portfile.cmake  usage  vcpkg.json
simple/: CMakeLists.txt  main.cpp
